--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .btn:hover { background: #7dd3fc; transform: translateY(-3px); }
         footer { margin-top: 50px; font-size: 11px; color: #64748b; border-top: 1px solid #334155; padding-top: 25px; line-height: 1.5; text-align: justify; }
         .legal { text-align: center; margin-top: 15px; }
-        .legal a { color: #38bdf8; text-decoration: none; margin: 0 10px; }
+        .legal a { color: #38bdf8; text-decoration: none; margin: 0 10px; font-weight: 600; }
     </style>
 </head>
 <body>
@@ -31,11 +31,13 @@
             <li>Risk Management Strategies</li>
             <li>Real-time Economic Updates</li>
         </div>
+        
         <a href="https://t.me/+q3wW5KfdHfwyMmQ0" class="btn">ACCESS COMMUNITY FOR FREE</a>
+        
         <footer>
             <strong>Risk Warning:</strong> Trading involves significant risk. Our content is for educational purposes only. Past performance does not guarantee future results. This site is not affiliated with Meta Platforms, Inc.
             <div class="legal">
-                <a href="privacy.html">Privacy Policy</a> | <a href="#">Terms</a>
+                <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms</a>
             </div>
         </footer>
     </div>
